--- a/index.html
+++ b/index.html
@@ -93,9 +93,25 @@
                     <h1>Welcome</h1>
                <img src="Image/welcome.png" width="400px" alt="" srcset="">
                 </div>
+            </div>            <h1 class="p-relative">Dashbord</h1>
+            <div class="wrapper d-grid gap-20">
+                <div class=" welcome bg-w red-10 txt-c-sm block-sm">
+                    <h1>Welcome</h1>
+               <img src="Image/welcome.png" width="400px" alt="" srcset="">
+                </div>
+            </div>            <h1 class="p-relative">Dashbord</h1>
+            <div class="wrapper d-grid gap-20">
+                <div class=" welcome bg-w red-10 txt-c-sm block-sm">
+                    <h1>Welcome</h1>
+               <img src="Image/welcome.png" width="400px" alt="" srcset="">
+                </div>
+            </div>            <h1 class="p-relative">Dashbord</h1>
+            <div class="wrapper d-grid gap-20">
+                <div class=" welcome bg-w red-10 txt-c-sm block-sm">
+                    <h1>Welcome</h1>
+               <img src="Image/welcome.png" width="400px" alt="" srcset="">
+                </div>
             </div> 
-
-            
         </div>
     </div>
 </body>
