--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <h1 class="p-relative ">Dashbord</h1>
-            <div class="wrapper d-grid gap-20">
+            <div class="  wrapper   d-grid gap-20">
                 <div class="welcome shadow-1 bg-w red-6 txt-c-sm block-sm">
                     <div class="intro p-20 flex-between bg-eee">
                         <div>
@@ -109,14 +109,87 @@
                     <h2 class="mt-0 mb-10">Quick Draft</h2>
                     <p class="mt-0 mb-20 c-gray fs-15">Write A Draft For Your Ideas</p>
                     <form action="">
-                        <input type="text"placeholder='Title' class="d-block mb-20 w-full p-10 bg-eee red-10 ">
-                        <textarea class="d-block mb-20 w-full p-10 b-none bg-eee red-6" placeholder='Your Thoght' style="height: 158px; width: 381px;"  rows="10"></textarea>
+                        <input type="text" placeholder='Title' class="d-block mb-20 w-full p-10 bg-eee red-10 ">
+                        <textarea class="d-block mb-20 w-full p-10 b-none bg-eee red-6" placeholder='Your Thoght'
+                            style="height: 158px; width: 381px;" rows="10"></textarea>
                         <input type="submit" class="save d-block fs-14 red-6 bg-blue c-w w-fit btn" value="Save ">
                     </form>
                 </div>
-            </div>   
+                <div class="targets p-20 bg-w red-6 shadow-1  ">
+                    <h2 class="mt-0 mb-20 ">Yearly Targets</h2>
+                    <p class="mt-0 mb- c-gray fs-14">Targets Of the Year</p>
+                    <div class="target-row mb-20 blue d-flex align-center ">
+                        <div class="icon flex-center">
+                            <i class="fas fa-dollar-sign c-blue fa-lg    "></i>
+                        </div>
+                        <div class="details">
+                            <span class="fs-14 c-gray ">Money</span>
+                            <span class="d-block mt-5 mb-10 fw-bold ">20.000</span>
+                            <div class="progress p-relative">
+                                <span class=" progress-bar bg-blue  blue" style="width: 80%">
+                                    <span class="bg-blue">80%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row mb-20 orange d-flex align-center ">
+                        <div class="icon flex-center">
+                            <i class="fas fa-code c-orange fa-lg    "></i>
+                        </div>
+                        <div class="details">
+                            <span class="fs-14 c-gray ">Projects</span>
+                            <span class="d-block mt-5 mb-10 fw-bold ">30</span>
+                            <div class="progress p-relative">
+                                <span class=" progress-bar bg-orange  orange" style="width: 55%">
+                                    <span class="bg-orange">55%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row mb-20 green d-flex align-center ">
+                        <div class="icon flex-center">
+                            <i class="fas fa-users  c-green fa-lg    "></i>
+                        </div>
+                        <div class="details">
+                            <span class="fs-14 c-gray ">Team</span>
+                            <span class="d-block mt-5 mb-10 fw-bold ">12</span>
+                            <div class="progress p-relative">
+                                <span class=" progress-bar bg-green  green" style="width: 75%">
+                                    <span class="bg-green">75%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tickets p-20 shadow-1 mb-20 bg-w red-6 txt-c-sm block-sm">
+                    <h2 class="mt-0 mb-20 ">Tickets Statistice</h2>
+                    <p class="mt-0 mb-20 c-gray fs-14">Everything About Support Tickets</p>
+                    <div class="d-flex txt-c gap-20 f-wrap">
+                        <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
+                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"  ></i>
+                            <span class="mb-10 d-block fs-15 fw-bold c-black" >2500</span>
+                            <span>Total</span>
+                        </div>
+                        <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
+                            <i class="fa fa-spinner fa-2x mb-10 c-blue"  ></i>
+                            <span class="mb-5 fs-15 d-block fw-bold c-black" >500</span>
+                            <span>Pending</span>
+                        </div>
+                        <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
+                            <i class="fa-regular fa-circle-check fa-2x m-10 c-green"  ></i>
+                            <span class="mb-5 d-block fw-bold c-black" >2500</span>
+                            <span>Closed</span>
+                        </div>
+                        <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
+                            <i class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-red"  ></i>
+                            <span class="mb-5 d-block fw-bold c-black" >2500</span>
+                            <span>Closed</span>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
