--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h2 class="m-0">welcome</h2>
                             <p class="c-gray mt-5">Shazloka</p>
                         </div>
-                        <img class="sm-hide" src="Image/team-talk.webp" width="250px" alt="" srcset="">
+                        <img class="sm-hide" src="Image/welcome.png" width="150px" alt="" srcset="">
                     </div>
                     <img src="Image/avatar.png" class="avatar" alt="">
                     <div class=" block-sm body    txt-c   py-20 mt-20 mb-20  ">
@@ -109,9 +109,9 @@
                     <h2 class="mt-0 mb-10">Quick Draft</h2>
                     <p class="mt-0 mb-20 c-gray fs-15">Write A Draft For Your Ideas</p>
                     <form action="">
-                        <input type="text" placeholder='Title' class="d-block mb-20 w-full p-10 bg-eee red-10 ">
-                        <textarea class="d-block mb-20 w-full p-10 b-none bg-eee red-6" placeholder='Your Thoght'
-                            style="height: 158px; width: 381px;" rows="10"></textarea>
+                        <input type="text" placeholder='Title' class="d-block mb-20 w-full p-10 bg-eee red-6 ">
+                        <textarea class="d-block mb-20 w-full p-10 b-none bg-eee red-5" placeholder='Your Thoght'
+                             cols="" rows="6"></textarea>
                         <input type="submit" class="save d-block fs-14 red-6 bg-blue c-w w-fit btn" value="Save ">
                     </form>
                 </div>
