--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="welcome shadow-1 bg-w red-6 txt-c-sm block-sm">
                     <div class="intro p-20 flex-between bg-eee">
                         <div>
-                            <h2 class="m-0">welcome</h2>
+                            <h2 class="m-0 mb-10 pt-15">welcome</h2>
                             <p class="c-gray mt-5">Shazloka</p>
                         </div>
                         <img class="sm-hide" src="Image/welcome.png" width="150px" alt="" srcset="">
@@ -106,18 +106,18 @@
                     <a href="profile.html" class="visit d-block fs-14 red-6 bg-blue c-w w-fit ">Profile</a>
                 </div>
                 <div class="quick-draft shadow-1  bg-w red-6 p-20  ">
-                    <h2 class="mt-0 mb-10">Quick Draft</h2>
+                    <h2 class="mt pt-15 mb-10">Quick Draft</h2>
                     <p class="mt-0 mb-20 c-gray fs-15">Write A Draft For Your Ideas</p>
                     <form action="">
                         <input type="text" placeholder='Title' class="d-block mb-20 w-full p-10 bg-eee red-6 ">
                         <textarea class="d-block mb-20 w-full p-10 b-none bg-eee red-5" placeholder='Your Thoght'
-                             cols="" rows="6"></textarea>
+                            cols="" rows="6"></textarea>
                         <input type="submit" class="save d-block fs-14 red-6 bg-blue c-w w-fit btn" value="Save ">
                     </form>
                 </div>
                 <div class="targets p-20 bg-w red-6 shadow-1  ">
-                    <h2 class="mt-0 mb-20 ">Yearly Targets</h2>
-                    <p class="mt-0 mb- c-gray fs-14">Targets Of the Year</p>
+                    <h2 class="mt-0 pt-15 mb-10 ">Yearly Targets</h2>
+                    <p class="mt-0  c-gray fs-14">Targets Of the Year</p>
                     <div class="target-row mb-20 blue d-flex align-center ">
                         <div class="icon flex-center">
                             <i class="fas fa-dollar-sign c-blue fa-lg    "></i>
@@ -162,34 +162,129 @@
                     </div>
                 </div>
                 <div class="tickets p-20 shadow-1 mb-20 bg-w red-6 txt-c-sm block-sm">
-                    <h2 class="mt-0 mb-20 ">Tickets Statistice</h2>
+                    <h2 class="mt-0 mb-10 pt-15 ">Tickets Statistice</h2>
                     <p class="mt-0 mb-20 c-gray fs-14">Everything About Support Tickets</p>
                     <div class="d-flex txt-c gap-20 f-wrap">
                         <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
-                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"  ></i>
-                            <span class="mb-10 d-block fs-15 fw-bold c-black" >2500</span>
+                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"></i>
+                            <span class="mb-10 d-block fs-15 fw-bold c-black">2500</span>
                             <span>Total</span>
                         </div>
                         <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
-                            <i class="fa fa-spinner fa-2x mb-10 c-blue"  ></i>
-                            <span class="mb-5 fs-15 d-block fw-bold c-black" >500</span>
+                            <i class="fa fa-spinner fa-2x mb-10 c-blue"></i>
+                            <span class="mb-5 fs-15 d-block fw-bold c-black">500</span>
                             <span>Pending</span>
                         </div>
                         <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
-                            <i class="fa-regular fa-circle-check fa-2x m-10 c-green"  ></i>
-                            <span class="mb-5 d-block fw-bold c-black" >2500</span>
+                            <i class="fa-regular fa-circle-check fa-2x m-10 c-green"></i>
+                            <span class="mb-5 d-block fw-bold c-black">2500</span>
                             <span>Closed</span>
                         </div>
                         <div class="box shadow-1-c-ddd border-1 p-20 red-10 fs-14 c-gray">
-                            <i class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-red"  ></i>
-                            <span class="mb-5 d-block fw-bold c-black" >2500</span>
+                            <i class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-red"></i>
+                            <span class="mb-5 d-block fw-bold c-black">2500</span>
                             <span>Closed</span>
                         </div>
-                        
+
                     </div>
                 </div>
+                <div class="lastest-news mb-20 p-20 bg-w red-6 txt-c-sm d-flex  ">
+                    <h2 class="mt-0 pt-15 mb-20">Latest News</h2>
+                    <div class="news-row d-flex align-center ">
+                        <img src="Image/news-01.png">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <div class="btn   bg-eee fs-12 fw-bold label">
+                                3 Days Ago
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-row d-flex align-center">
+                        <img src="Image/news-02.png">
+                        <div class="body">
+
+                            <div class="info">
+                                <h3>Changed The Design</h3>
+                                <p class="m-0 fs-14 c-gray">A Brand New Website Design</p>
+                            </div>
+                            <div class="btn   bg-eee fs-12 fw-bold label">
+                                5 Days Ago
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-row d-flex align-center">
+                        <img src="Image/news-03.png">
+                        <div class="body">
+
+                            <div class="info">
+                                <h3>Team Increased </h3>
+                                <p class="m-0 fs-14 c-gray">3 Developers Joined The Team </p>
+                            </div>
+                            <div class="btn   bg-eee fs-12 fw-bold label">
+                                7 Days Ago
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="news-row d-flex align-center">
+                        <img src="Image/news-04.png">
+                        <div class="body">
+
+                            <div class="info">
+                                <h3>Added Payment Gateway </h3>
+                                <p class="m-0 fs-14 c-gray">Many New Payment  Added </p>
+                            </div>
+                            <div class="btn   bg-eee fs-12 fw-bold label">
+                                9 Days Ago
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lastest-tasks mb-20 p-20 bg-w red-6 txt-c-sm  ">
+                    <h2 class="mt-0 pt-15 mb-20">Latest Tasks </h2>
+                    <div class="task-row flex-between">
+                        <div class="info">
+                            <h3 class="mt-0 mb-5 fs-15"> Record One New Video </h3>
+                            <p class="m-0 fs-13  c-gray">Record Python Create Exe Project</p>
+                        </div>
+                        <i class="fa fa-trash pointer" aria-hidden="true"></i>
+                    </div>
+                    <div class="task-row flex-between">
+                        <div class="info">
+                            <h3 class="mt-0 mb-5 fs-15"> Write Article </h3>
+                            <p class="m-0 fs-13  c-gray">Write Low Level vs High Level Languages</p>
+                        </div>
+                        <i class="fa fa-trash pb-20 pointer" aria-hidden="true"></i>
+                    </div>
+                    <div class="task-row flex-between">
+                        <div class="info">
+                            <h3 class="mt-0 mb-5 fs-15"> Finish Project</h3>
+                            <p class="m-0 fs-13  c-gray">Publish Academy Programming Project</p>
+                        </div>
+                        <i class="fa fa-trash pointer" aria-hidden="true"></i>
+                    </div>
+                    <div class="task-row flex-between">
+                        <div class="info ">
+                            <h3 class="mt-0 mb-5 fs-15 txt-deco opacity-3"> Attend The Meeting</h3>
+                            <p class="m-0 fs-13 c-gray txt-deco opacity-3">Attend The Project Business Analysis Meeting  </p>
+                        </div>
+                        <i class="fa fa-trash opacity-3 not-allow" aria-hidden="true"></i>
+                    </div>  
+                    <div class="task-row flex-between">
+                        <div class="info">
+                            <h3 class="mt-0 mb-5 fs-15"> Finish Lesson </h3>
+                            <p class="m-0 fs-13  c-gray">Finish Teaching Flex Box</p>
+                        </div>
+                        <i class="fa fa-trash pointer" aria-hidden="true"></i>
+                    </div>
+   
+                </div>
             </div>
-        </div>
 </body>
 
 </html>
