--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
                             <div class="info">
                                 <h3>Added Payment Gateway </h3>
-                                <p class="m-0 fs-14 c-gray">Many New Payment  Added </p>
+                                <p class="m-0 fs-14 c-gray">Many New Payment Added </p>
                             </div>
                             <div class="btn   bg-eee fs-12 fw-bold label">
                                 9 Days Ago
@@ -271,10 +271,11 @@
                     <div class="task-row flex-between">
                         <div class="info ">
                             <h3 class="mt-0 mb-5 fs-15 txt-deco opacity-3"> Attend The Meeting</h3>
-                            <p class="m-0 fs-13 c-gray txt-deco opacity-3">Attend The Project Business Analysis Meeting  </p>
+                            <p class="m-0 fs-13 c-gray txt-deco opacity-3">Attend The Project Business Analysis Meeting
+                            </p>
                         </div>
                         <i class="fa fa-trash opacity-3 not-allow" aria-hidden="true"></i>
-                    </div>  
+                    </div>
                     <div class="task-row flex-between">
                         <div class="info">
                             <h3 class="mt-0 mb-5 fs-15"> Finish Lesson </h3>
@@ -282,9 +283,115 @@
                         </div>
                         <i class="fa fa-trash pointer" aria-hidden="true"></i>
                     </div>
-   
+                </div>
+
+                <div class="search-items  mb-20 p-20 bg-w red-6 txt-c-sm  ">
+                    <h2 class="mt-0 pt-15 mb-5">Top Search Items </h2>
+                    <div class="flex-between bg">
+                        <p class="c-gray">Keyword</p>
+                        <span class="c-gray">Search Count</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">JavaScript</p>
+                        <span class="bg-gray2 c-black item">220</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">Angular+2</p>
+                        <span class="bg-gray2 c-black item">180</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">React.Js </p>
+                        <span class="bg-gray2 c-black item">220</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">Next.JS</p>
+                        <span class="bg-gray2 c-black item">200</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">Design</p>
+                        <span class="bg-gray2 c-black item">125</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">Python</p>
+                        <span class="bg-gray2 c-black item">220</span>
+                    </div>
+                    <div class="flex-between bg">
+                        <p style="font-size: 0.8rem;">Frontend </p>
+                        <span class="bg-gray2 c-black item">220</span>
+                    </div>
+                </div>
+                <div class="lastest-news mb-20 p-20 bg-w red-6 txt-c-sm d-flex  ">
+                    <h2 class="mt-0 pt-15 mb-20">Latest Uploads</h2>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/avi.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">2.9mb</span>
+                        </div>
+                    </div>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/txt.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">3.0mb</span>
+
+                        </div>
+                    </div>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/zip.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">3.9mb</span>
+
+                        </div>
+                    </div>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/psd.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">5.9mb</span>
+
+                        </div>
+                    </div>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/pdf.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">1.9mb</span>
+
+                        </div>
+                    </div>
+                    <div class=" latest_uploads d-flex align-center ">
+                        <img   src="Image/sql.svg "class="icon-section8">
+                        <div class="body">
+                            <div class="info">
+                                <h3>Created SASS Section </h3>
+                                <p class="m-0 fs-14 c-gray">New SCSS Example</p>
+                            </div>
+                            <span class="bg-gray2 c-black item">9.9mb</span>
+
+                        </div>
+                    </div>
+ 
                 </div>
             </div>
+
+        </div>
 </body>
 
 </html>
