--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/framework.css">
+    <link rel="icon" href="Image/dashboard.png">
     <title>Dashbord</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/824a87a2e1.js" crossorigin="anonymous"></script>
-
 
 </head>
 
@@ -244,7 +244,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="lastest-tasks mb-20 p-20 bg-w red-6 txt-c-sm  ">
                     <h2 class="mt-0 pt-15 mb-20">Latest Tasks </h2>
                     <div class="task-row flex-between">
@@ -284,7 +283,6 @@
                         <i class="fa fa-trash pointer" aria-hidden="true"></i>
                     </div>
                 </div>
-
                 <div class="search-items  mb-20 p-20 bg-w red-6 txt-c-sm  ">
                     <h2 class="mt-0 pt-15 mb-5">Top Search Items </h2>
                     <div class="flex-between bg">
@@ -389,9 +387,118 @@
                     </div>
  
                 </div>
+                <div class="last-project mb-20 p-20 bg-w red-6 txt-c-sm d-flex p-relative   ">
+                    <h2 class="mt-0 pt-15 mb-20">Last Project Process</h2>
+                    <ul class="list-none m-0 p-relative"> 
+                        <li class=" d-flex align-center done">Got the Project</li>
+                        <li class="mt-25 mr-25  d-flex align-center done">Started The Project</li>
+                        <li class="mt-25 d-flex align-center done">The Project About To Finish</li>
+                        <li class="mt-25 d-flex align-center done">The Project About To Finish</li>
+                        <li class="mt-25 d-flex align-center current">Test the project</li>
+                        <li class="mt-25 d-flex align-center ">finsh the project & Get Money</li>
+                        <li class="mt-25 d-flex align-center ">finsh the project & Get Money</li>
+                        
+
+                    </ul>
+                    <img  class="launch-icon opacity-3 sm-hide" src="Image/project.png" alt="">
+                </div>
+
+                <div class="reminder pb-25 mb-20 p-20 bg-w red-6  txt-c-sm  p-relative   ">
+                    <h2 class="mt-0  pt-15 mb-20">Reminders </h2>
+                    <ul class="list-none p-0 m-0 pb-20">
+                        <li class="d-flex align-center mt-15">
+                            <span class="key bg-blue mr-15 d-block red-circle"></span>
+                            <div class="pl-15 blue">
+                                <p class="fs-14 fw-bold mt-0 mb-5">Check My Tasks List </p>
+                                <span class="fs-13 c-gray">26/09/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex mt-20 align-center mt-15">
+                            <span class="key bg-orange mr-15 d-block red-circle"></span>
+                            <div class="pl-15 orange">
+                                <p class="fs-14 fw-bold mt-0 mb-5">Check My Project </p>
+                                <span class="fs-13 c-gray">24/10/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex mt-20 align-center mt-15">
+                            <span class="key bg-green mr-15 d-block red-circle"></span>
+                            <div class="pl-15 green">
+                                <p class="fs-14 fw-bold mt-0 mb-5">Call All my Client  </p>
+                                <span class="fs-13 c-gray">05/11/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex mt-20 align-center mt-15">
+                            <span class="key bg-red mr-15 d-block red-circle"></span>
+                            <div class="pl-15 red">
+                                <p class="fs-14 fw-bold mt-0 mb-5">Finish The Development Workshop </p>
+                                <span class="fs-13 c-gray">20/12/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                    </ul>
+            
+                </div>
+
+                <div class="lasted-post   mb-20 p-20 bg-w red-6  txt-c-sm  p-relative ">
+                    <h2 class="mt-0  pt-15 mb-20">Latest post </h2>
+                    <div class="top d-flex    flex-column">
+                        <div class="header d-flex flex-row align-center">
+                            <img src="Image/avatar.png" class="avatar mr-15" alt="">
+                            <div class="info">
+                                <span class="h1 d-block mb-5 fw-bold">Ahmed Elshazly</span>
+                                <span class="c-gray">About 3 Hours Ago</span>
+                            </div>
+                        </div>
+                        <div class="post-content sm-text-center  pt-15 pb-15 mt-20 mb-20 ">
+                            <p>You Can Fool All Of The People Some Of The Time, And Some OfThe People All Of The Time, But You Can't Fool All Of The People All Of The Time.</p>
+                        </div>
+
+                        <div class="post-stats d-flex flex-between c-gray">
+                            <div>
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                <span class="fs-15">1.8K</span>
+                            </div>
+                            <div>
+                                <i class="fa fa-comments-o" aria-hidden="true"></i>
+                                <span class="fs-15">500</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lasted-social   mb-20 p-20 bg-w red-6  txt-c-sm  p-relative ">
+                    <h2 class="mt-0  pt-10  mb-20">Social Media Stats </h2>
+                    <div class="content d-flex  ">
+                        <i class="icon  fa fa-twitter bg-twitter " aria-hidden="true"></i>
+                        <div class="info bg-twitter-O-3 d-flex flex-between align-center w-100  ">
+                            <span class="c-blue">90K Followers</span>
+                            <div class="btn bg-twitter">Follow</div>
+                        </div>
+                    </div> 
+                    <div class="content d-flex mt-10   ">
+                        <i class="icon  fa fa-facebook bg-blue  " ></i>
+                        <div class="info bg-facebook-O-3 d-flex flex-between align-center w-100  ">
+                            <span class="c-blue">2M Like</span>
+                            <div class="btn bg-blue">Like</div>
+                        </div>
+                    </div> 
+                    <div class="content d-flex mt-10  ">
+                        <i class="icon  fa fa-youtube bg-r " ></i>
+                        <div class="info bg-youtube-O-3  d-flex flex-between align-center w-100  ">
+                            <span class="c-r">3M Subs</span>
+                            <div class="btn bg-r">Subscribe</div>
+                        </div>
+                    </div> 
+                    <div class="content d-flex mt-10  ">
+                        <i class="icon  fa fa-linkedin bg-linkedin " ></i>
+                        <div class="info bg-linkedin-O-3 d-flex flex-between align-center w-100  ">
+                            <span class="c-linkedin">3M Subs</span>
+                            <div class="btn bg-linkedin">Connect</div>
+                        </div>
+                    </div> 
+                </div>
             </div>
-
+ 
         </div>
-</body>
 
+</body>
 </html>
